--- a/package.json
+++ b/package.json
@@ -3,18 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-google-maps/api": "^2.7.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "select-pure": "^2.1.2-alpha.0",
-    "swiper": "^8.0.3",
-    "web-vitals": "^2.1.4"
+    "swiper": "^8.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
